도움말 부분수정

--- a/docs/디바이스별 슬롯사용과 레이지로딩 전략 업데이트-2026.01.07.md
+++ b/docs/디바이스별 슬롯사용과 레이지로딩 전략 업데이트-2026.01.07.md
@@ -79,8 +79,8 @@
     * **Load Strategy:**
         * **Desktop 에서:** Eager Load (리스트 노출 시점 고려)
         * **Mobile/Tablet 에서:** Lazy Load (스크롤 하단 위치 고려)
-        * **Targeting:** `load_type` 키 값을 디바이스에 따라 `'eager'` 또는 `'lazy'`로 동적 할당(아래와 같이).
-    **.setTargeting('load_type', deviceCategory === 'desktop' ? 'eager' : 'lazy')**
+        * `.setTargeting('load_type', ...)` 키 값을 디바이스에 따라 `'eager'` 또는 `'lazy'`로 동적 할당(아래와 같이).
+        **.setTargeting('load_type', deviceCategory === 'desktop' ? 'eager' : 'lazy').**
 
 ### 2-2. HOME GPT (메인)
 * **`TC_billboard_leaderboard` (상단 빌보드)**
@@ -104,7 +104,7 @@
         * **Mobile/Tablet 에서:** **Lazy Load** (반응형, 하단으로 레이아웃 변경됨에 따른 최적화)
     * **Logic Implementation:**
         * `isDesktop` 판별 로직을 통해 `EAGER_AD_SLOT_IDS` 배열에 동적으로 추가.
-        * `.setTargeting('load_type', ...)` 값을 디바이스 환경에 맞춰 분기 처리하여 리포트 정합성 확보.
-        **.setTargeting('load_type', deviceCategory === 'desktop' ? 'eager' : 'lazy')**
+        * `.setTargeting('load_type', ...)` 키 값을 디바이스에 따라 `'eager'` 또는 `'lazy'`로 동적 할당(아래와 같이).
+        **.setTargeting('load_type', deviceCategory === 'desktop' ? 'eager' : 'lazy').**
 ---
 
