(중요) DeviceCategory별 슬롯 및 로딩 전략 최적화 작업 - 코딩 샘플 및 참고 할 표 업데이트

--- a/docs/디바이스별 슬롯사용과 레이지로딩 전략 업데이트-2026.01.07.md
+++ b/docs/디바이스별 슬롯사용과 레이지로딩 전략 업데이트-2026.01.07.md
@@ -23,18 +23,95 @@
     });
     ```
 
-### 1-2. Lazy Load 로직을 Lazy load 대상이 아닌 리스트 '제외' 패턴으로 변경
-기존의 Lazy Load 대상 슬롯을 일일이 나열하던 방식(Whitelist)에서, **즉시 로드(Eager) 슬롯들만 관리하고 나머지는 모두 자동으로 Lazy Load 처리하는 방식(Blacklist)**으로 로직을 반전.
+### 1-2. Lazy Load 로직을 Lazy load 대상이 아닌 리스트 Lazy load '제외' 패턴으로 변경
+기존의 Lazy Load 대상 슬롯을 일일이 나열하던 방식(Whitelist)에서, **갯수가 작은 즉시 로드(Eager) 슬롯들만 관리하고 나머지는 모두 자동으로 Lazy Load 처리하는 방식(Blacklist)**으로 로직을 반전.
 
 * **목적:** 운영 편의 및 Human Error(누락) 방지
 * **구현:**
-    * 상수 변경: `LAZY_AD_SLOT_IDS` → **`EAGER_AD_SLOT_IDS`** (즉시 로드 대상 관리)
-    * Observer 로직: `!EAGER_AD_SLOT_IDS.includes(id)` 조건으로 Lazy 대상 자동 수집
+    * 상수 변경: `LAZY_AD_SLOT_IDS` → **`EAGER_AD_SLOT_IDS`** (즉시 로드 대상 중심으로 관리)
+    * Observer 로직: `!EAGER_AD_SLOT_IDS.includes(id)` 조건으로 Lazy 대상 자동 수집.
+    * 즉, 제외 목록(`EAGER_AD_SLOT_IDS`)에 **없는** 슬롯만 자동으로 Lazy Load 대상으로 수집 (Blacklist 방식).
     * Eager 처리: `googletag.cmd` 초기화 시점에 `EAGER_AD_SLOT_IDS`에 포함된 슬롯은 즉시 `refresh()` 호출
     * 아래 부분에 대한 업데이트를 제외하고 기존, **setupLazyLoading, DOMContentLoaded, IntersectionObserver, ObservingLazySlots 관련 로직** 코딩에는 수정사항 불필요
 
-### 1-3. DeviceCategory(desktop, tablet, smartphone) 에 따라 사용할 광고 슬롯과, 레이지로딩 전략 세분화
-, **아래 표 참조**
+
+### 1-3. 수정된 코드 (View 페이지 기준 샘플)
+
+### 최적화 1: Eager Slot 정의 (수정된 태그)
+
+```javascript
+// 💡 [수정 작업 5] 즉시 로딩(Eager)이 필요한 슬롯만 정의 (소수 관리)
+const EAGER_AD_SLOT_IDS = [
+    'TC_billboard_leaderboard', // 상단 빌보드 (Home/Section 등에서 사용, 안전장치)
+    'TC_billboard_X'            // View 상단 빌보드
+];
+
+// 💡 [수정 작업 3, 5] 데스크톱일 때 추가로 즉시 로드할 슬롯들 반영
+if (isDesktop) {
+    EAGER_AD_SLOT_IDS.push('MR_side_rail_X'); // 우측 레일
+    EAGER_AD_SLOT_IDS.push('BC_native_list_1', 'BC_native_list_2'); // Native 리스트 광고 (데스크톱 Eager)
+}
+
+let lazyAdSlotsHTML = [];
+let lazyGamSlots = [];
+let lazyObserver = null; 
+```
+
+### 최적화 2. Lazy Load 대상 광고 슬롯 설정 및 Observer 생성 (💡 수정 작업 5 적용)
+
+**주요 변경 사항:**
+* **기존:** 고정된 `LAZY_AD_SLOT_IDS` 리스트를 순회 (Whitelist 방식)
+* **변경:** DOM의 모든 `.ad-slot`을 순회하며 `EAGER_AD_SLOT_IDS`에 **없는** 것만 자동 수집 (Blacklist 방식)
+
+```javascript
+// ==========================================================
+// 함수 2. Lazy Load 대상 광고 슬롯 설정 및 Observer 생성 (💡 수정 작업 5 적용)
+//
+// - 기존: 고정된 LAZY_AD_SLOT_IDS 리스트를 순회
+// - 변경: DOM의 모든 .ad-slot을 순회하며 EAGER_AD_SLOT_IDS에 없는 것만 자동 수집 (Blacklist 방식)
+// ==========================================================
+function setupLazyLoading() {
+    // 1) DOM 상에서 Lazy 대상 슬롯 수집 (제외 리스트 방식 적용)
+    const allAdSlots = document.querySelectorAll('.ad-slot, .native-ad-list-item');
+    lazyAdSlotsHTML = [];
+
+    allAdSlots.forEach(slot => {
+        // ⭐ 수정: ID가 EAGER_AD_SLOT_IDS에 '포함되지 않은' 것만 Lazy 대상으로 등록
+        if (slot.id && !EAGER_AD_SLOT_IDS.includes(slot.id)) {
+            lazyAdSlotsHTML.push(slot);
+        }
+    });
+
+    // 2) GAM 슬롯 객체 필터링 (제외 리스트 방식 적용)
+    lazyGamSlots = [];
+    if (window.googletag && googletag.cmd) {
+        googletag.cmd.push(function () {
+            const definedSlots = googletag.pubads().getSlots();
+
+            // ⭐ 수정: 제외 목록에 없는 슬롯만 필터링하여 lazyGamSlots에 저장
+            lazyGamSlots = definedSlots.filter(slot =>
+                !EAGER_AD_SLOT_IDS.includes(slot.getSlotElementId())
+            );
+
+            // [추가 기능] 즉시 로드 대상(Eager)은 이 시점에 바로 refresh 호출
+            const eagerSlots = definedSlots.filter(slot =>
+                EAGER_AD_SLOT_IDS.includes(slot.getSlotElementId())
+            );
+            
+            if (eagerSlots.length > 0) {
+                // TC_billboard_X 등 이미 상단에서 호출된 것과 중복되지 않도록 refresh
+                // (필요 시 중복 호출 방지 로직 추가 가능, 여기서는 명시적 호출 보장)
+                // 단, display()는 body 내 script에서 이미 처리됨을 가정하거나 확인 필요
+                googletag.pubads().refresh(eagerSlots);
+                console.log("⚡ [Eager Load] Immediate refresh for:", eagerSlots.map(s => s.getSlotElementId()));
+            }
+        });
+    }
+}
+```
+
+### (참고) DeviceCategory(desktop, tablet, smartphone) 에 따라 사용할 광고 슬롯과, 레이지로딩 전략 세분화. 
+
 
 | page_name | slot_id | deviceCategory별<br>광고 슬롯 사용여부 | Desktop<br>Loading Type | Mobile/Tablet<br>Loading Type | load_type (Key Value) |
 | :--- | :--- | :--- | :--- | :--- | :--- |
